Expose hibernate session to allow more detailed state hibernation

--- a/node/build.gradle
+++ b/node/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'net.corda.plugins.quasar-utils'
 apply plugin: 'net.corda.plugins.publish-utils'
 
 description 'Corda node modules'
+version = '0.8.2.a'
 
 repositories {
     mavenLocal()
