Renamed webserver capsule to webcapsule module to avoid clashes with the node capsule

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,7 +8,7 @@ include 'node-schemas'
 include 'node'
 include 'node:capsule'
 include 'node:webserver'
-include 'node:webserver:capsule'
+include 'node:webserver:webcapsule'
 include 'client'
 include 'experimental'
 include 'experimental:sandbox'
