Webserver capsule now contains the correct caplet which was missing due to an incorrect path.

--- a/node/webserver/capsule/build.gradle
+++ b/node/webserver/capsule/build.gradle
@@ -51,7 +51,7 @@ dependencies {
 task buildWebserverJar(type: FatCapsule) {
     applicationClass 'net.corda.webserver.WebServer'
     archiveName "corda-webserver-${corda_version}.jar"
-    applicationSource = files(project.tasks.findByName('jar'), '../build/classes/main/CordaCaplet.class', 'config/dev/log4j2.xml')
+    applicationSource = files(project.tasks.findByName('jar'), new File(project(':node').rootDir, 'node/build/classes/main/CordaCaplet.class'), 'config/dev/log4j2.xml')
     from 'NOTICE' // Copy CDDL notice
 
     capsuleManifest {
